--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,8 @@
   <body>
     <header>
       <!-- source logo here    keep images outside of app dir      in assets -->
-      cfgram
+
+      <p>cfgram</p>
     </header>
     <ui-view></ui-view>
     <!-- footer -->
