--- a/app/index.html
+++ b/app/index.html
@@ -7,12 +7,11 @@
   </head>
   <body>
     <header>
-      <!-- source logo here    keep images outside of app dir      in assets -->
-
-      <p>cfgram</p>
+      <navbar></navbar>
     </header>
-    <ui-view></ui-view>
-    <!-- footer -->
+    <main>
+      <ui-view></ui-view>
+    </main>
     <footer></footer>
   </body>
 </html>
